# Student-Management-System

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LoginManager.cpp  Person.cpp  Person.h  README.md  Student.cpp  Student.h  StudentManager.cpp  StudentManager.h  main.cpp  students.txt
include/: Database.h  LoginManager.h  Routes.h
src/: Database.cpp  Person.cpp  Routes.cpp  Student.cpp  web_main.cpp
static/css/: style.css
templates/: addStudent.html  dashboard.html  deleteStudent.html  login.html  reports.html  searchStudent.html  updateStudent.html  viewstudents.html
